--- a/styles/style.css
+++ b/styles/style.css
@@ -53,6 +53,7 @@ body {
 #dice, path {
   background-color: #f8f9fa;
   border-radius: 25px;
+  box-shadow: 0px 0px 69px -8px rgba(0,0,0,0.30);
 }
 
 
