--- a/styles/style.css
+++ b/styles/style.css
@@ -57,13 +57,26 @@ body {
   font-size: 1.7rem;
 }
 
-#dice > img {
+#dice {
   background-color: #f8f9fa;
   color: #EB4D4D;
   border-radius: 20%;
   height: 5rem;
   width: 5rem;
   box-shadow: 0px 0px 69px -8px rgba(0,0,0,0.35);
+}
+
+@keyframes rotate-scale {
+  0% {
+      transform: scale(1) rotate3d(1, 1, 0, 0deg);
+  }
+  100% {
+      transform: scale(1) rotate3d(1, 1, 0, -360deg);
+  }
+}
+
+.rotate {
+  animation: rotate-scale 1s ease 0s 1 normal forwards;
 }
 
 
@@ -100,5 +113,5 @@ body {
   .btn { font-size: 0.8rem; }
   #button-new-game { position: absolute; top: 0%; }
   .buttons-game { position: absolute; bottom: 0%; display: flex; }
-  #dice > svg { height: 3rem; width: 3rem; }
+  #dice { height: 3rem; width: 3rem; }
 }
