--- a/styles/style.css
+++ b/styles/style.css
@@ -70,7 +70,7 @@ body {
   background-size: cover;
 }
 
-
+       /* -- DICE ROTATE -- */
 @keyframes rotate-scale {
   0% {
       transform: scale(1) rotate3d(1, 1, 0, 0deg);
